# PantallaTFG

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  demo.c  lcd.c  main.c  touch.c  touch.h
main/ESPNOW/: espNow.c  espNow.h
main/ui/: MainScreen.c  MainScreen.h  sendRfScreen.
main/ui/CommonUI/: InterfacesUtils.h  Keyboard.c  Keyboard.h
main/ui/GeneralObjects/: InterfacesUtils.c  Keyboard.c
main/ui/IR/: IRScreen.c  IRScreen.h  ReceiveIRScreen.h  ReceiveIrScreen.c  SendIrScreen.c  SendIrScreen.h  SendTvIrScreen.c  SendTvIrScreen.h
main/ui/IR/DevicesTypes/AC/: AC.c  AC.h
main/ui/IR/DevicesTypes/Lamp/: LampIR.c  LampIR.h
main/ui/IR/DevicesTypes/TV/: TVIRScreen.c  TVIRScreen.h
main/ui/IR/DevicesTypes/Utils/COMMANDS/Receiver/: IRCommandReceiver.c  IRCommandReceiver.h
main/ui/IR/DevicesTypes/Utils/COMMANDS/Send/: IRCommandSender.c  IRCommandSender.h
main/ui/IR/Receive/: ReceiveIRScreen.h  ReceiveIrScreen.c
main/ui/IR/Sender/: SendIrScreen.c  SendIrScreen.h
main/ui/IR/Utils/: Enums.h
main/ui/IR/Utils/DispositiveSelector/: IRDispositiveSelector.c  IRDispositiveSelector.h
main/ui/IR/Utils/DropDown/: IRDropdown.c  IRDropdown.h
main/ui/IR/Utils/JSONManager/: IRDataRead.c  IRDataRead.h  IRDataStore.c  IRDataStore.h
main/ui/RF/: AlarmRfScreen.c  GarageRfScreen.c  GarageRfScreen.h  LightRfScreen.c  LightRfScreen.h  RFDataStore.c  RFDataStore.h  ReceiveRfScreen.c  RfScreen.c  RfScreen.h  SendRfScreen.c  SendRfScreen.h  sendRFBackend.c
main/ui/RF/DevicesTypes/Alarm/: AlarmRfScreen.c  AlarmRfScreen.h
main/ui/RF/DevicesTypes/Garage/: GarageRfScreen.c  GarageRfScreen.h
main/ui/RF/DevicesTypes/Light/: LightRfScreen.c
main/ui/RF/Receive/: ReceiveRfScreen.c  ReceiveRfScreen.h
main/ui/RF/Send/: SendRfScreen.c  SendRfScreen.h
main/ui/RF/Utils/: Enums.h
main/ui/RF/Utils/Commands/Receiver/: RFCommandReceiver.c  RFCommandReceiver.h
main/ui/RF/Utils/Commands/Sender/: RFCommandSender.c  RFCommandSender.h
main/ui/RF/Utils/DispositiveSelectorType/: DispositiveSelector.c  DispositiveSelector.h
main/ui/RF/Utils/Dropdown/: RFDropDown.c  RFDropDown.h
main/ui/RF/Utils/JSONManager/: RFDataRead.c  RFDataRead.h  RFDataStore.c  RFDataStore.h
main/ui/RFID/: ReceiveRfidScreen.c  ReceiveRfidScreen.h  RfidDataStore.c  RfidDataStore.h  RfidScreen.c  RfidScreen.h  SendRfidScreen.c  SendRfidScreen.h  sendRfidBackend.c
main/ui/RFID/Receive/: ReceiveRfidScreen.c  ReceiveRfidScreen.h
main/ui/RFID/Send/: SendRfidScreen.c  SendRfidScreen.h
main/ui/RFID/Utils/JSONManager/: RFIDDataRead.c  RFIDDataRead.h  RfidDataStore.c  RfidDataStore.h
main/ui/Settings/: AddIrDispScreen.c  AddIrDispScreen.h  AddRfDispScreen.h  AddRfidDispScreen.h  AddRfidScreen.c  AddrfdispScreen.c  SettingsScreen.c  SettingsScreen.h
main/ui/Settings/AddIR/: AddIrDispScreen.c  AddIrDispScreen.h
main/ui/Settings/AddRF/: AddRfDispScreen.h  AddrfdispScreen.c
main/ui/Settings/AddRFID/: AddRfidDispScreen.h  AddRfidScreen.c
main/ui/Settings/Reset/: Reset.c  Reset.h
main/ui/UILibs/CJSONStorage/: JSONManager.c  JSONManager.h
main/ui/UILibs/CJSONStorage/Read/: ReadJson.c  ReadJson.h
main/ui/UILibs/CJSONStorage/Write/: WriteJson.c  WriteJson.h
main/ui/UILibs/Popup/Confirmation/: ConfirmationPopup.c  ConfirmationPopup.h
main/ui/UILibs/Popup/Loading/: Loading.c  Loading.h
